// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expense Snapshot expense  1`] = `
<li>
  <Link
    replace={false}
    to="/editar/1"
  >
    <h1>
       
      Afro
       
    </h1>
  </Link>
  <p>
    Algo perron
  </p>
  <p>
    7th Jan 1970
  </p>
  <p>
    $100.00
  </p>
  <button
    onClick={[Function]}
  >
    Eliminar
  </button>
</li>
`;

exports[`Expense Snapshot expense vacio 1`] = `
<li>
  <Link
    replace={false}
    to="/editar/undefined"
  >
    <h1>
       
       
    </h1>
  </Link>
  <p />
  <p>
    31st Dec 1969
  </p>
  <p>
    $0.00
  </p>
  <button
    onClick={[Function]}
  >
    Eliminar
  </button>
</li>
`;
